k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: webinar
  name: webinar
  namespace: default
spec:
  externalTrafficPolicy: Cluster
  ports:
    - nodePort: 30204
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: webinar
  type: LoadBalancer
